testsuite/tests/grammar/invalid_unparser/list-extra.lkt
import common

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Root(or(
        Root("example" list+(leaf, ",", allow_leading))
        | list+(leaf, ",")
    ))
    leaf <- or(Identifier(@Identifier) | Number(@Number))
}
